<resources>
    <string name="app_name"
        translatable="false">Mizmer</string>
    <string name="action_settings"
        translatable="false">Settings</string>
    <string name="mail"
        translatable="false">Mail</string>
    <string name="olustur"
        translatable="false">Oluştur</string>
    <string name="sifre_tekrar"
        translatable="false">Şifre Tekrar</string>
    <string name="sifre"
        translatable="false">Şifre</string>
    <string name="adi_soyadi"
        translatable="false">Adı Soyadı</string>
    <string name="kullan_c_ad_mail"
        translatable="false">Kullanıcı Adı(Mail)</string>
    <string name="giris"
        translatable="false">Giris</string>
    <string name="kayıt_olustur"
        translatable="false">Kayıt Oluştur</string>
    <string name="todo"
        translatable="false">TODO</string>
    <string name="popup_title"
        translatable="false">Dikkat edilmesi gereken kurallar!</string>
    <string name="popup_message"
        translatable="false">bla bla ...</string>
    <string name="dtmm1"
        translatable="false">DTMM1</string>
    <string name="evet"
        translatable="false">EVET</string>
    <string name="sign_in"
        translatable="false">Sign In</string>
    <string name="sign_up"
        translatable="false">Sign Up</string>
    <string name="hayir"
        translatable="false">HAYIR</string>

    <string name="title_menu"
        translatable="false">Anasayfa</string>
    <string name="title_aboutUs"
        translatable="false">Biz Kimiz?</string>
    <string name="title_dtmm"
        translatable="false">DTMM</string>
    <string name="title_profile"
        translatable="false">Profil</string>
    <string name="title_suggestions"
        translatable="false">Arkadaş</string>


    <string name="ilgisiz"
        translatable="false">İLGİSİZ</string>
    <string name="ilerle"
        translatable="false">İLERLE</string>
    <string name="dtmm2"
        translatable="false">DTMM2</string>
    <string name="dtmm3"
        translatable="false">DTMM3</string>
    <string name="dtmm4"
        translatable="false">DTMM4</string>
    <string name="dtmm5"
        translatable="false">DTMM5</string>
    <string name="dtmm6"
        translatable="false">DTMM6</string>
    <string name="dtmm7"
        translatable="false">DTMM7</string>
    <string name="dtmm8"
        translatable="false">DTMM8</string>
    <string name="dtmm9"
        translatable="false">DTMM9</string>
    <string name="two"
        translatable="false">2</string>
    <string name="three"
        translatable="false">3</string>
    <string name="four"
        translatable="false">4</string>
    <string name="five"
        translatable="false">5</string>
    <string name="six"
        translatable="false">6</string>
    <string name="seven"
        translatable="false">7</string>
    <string name="eight"
        translatable="false">8</string>
    <string name="nine"
        translatable="false">9</string>
    <string name="ten"
        translatable="false">10</string>
    <string name="one"
        translatable="false">1</string>
    <string name="textview"
        translatable="false">TextView</string>
    <string name="asama2"
        translatable="false">Aşama2</string>
    <string name="sonuc"
        translatable="false">Sonuc</string>
    <string name="title_activity_navigation_drawer_menu"
        translatable="false">Mizmer</string>
    <string name="title_home"
        translatable="false">Home</string>
    <string name="title_dashboard"
        translatable="false">Dashboard</string>
    <string name="title_notifications"
        translatable="false">Notifications</string>
    <string name="biz_kimiz_text"
        translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
        nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
        Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
        In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</string>
    <string name="dtmm_text"
        translatable="false">DTM1: Kusursuzluğu Arayan Mizaç Tip

DTM2: Duyguları Hissetmeyi Arayan Mizaç Tipi

DTM3: Hayran Olunacak Kendilik İmajı Arayan Mizaç Tipi

DTM4: Duyguların Anlamını Arayan Mizaç Tipi

DTM5: Bilginin Anlamına Ulaşmayı Arayan Mizaç Tipi

DTM6: Entelektüel Dinginlik Arayan Mizaç Tipi

DTM7: Keşfetmenin Hazzını Arayan Mizaç Tipi

DTM8: Mutlak Güç Arayan Mizaç Tipi

DTM9: Duyumsal-Hareketsel Konfor Arayan Mizaç Tipi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"
        translatable="false">Hello blank fragment</string>
    <string name="start_test"
        translatable="false">Arkadaş ekle ve mizacını belirle</string>
    <string name="login_txt">Giriş Yap</string>
    <string name="login_register_txt">Kayıt Ol</string>
    <string name="login_askforregister">Hala bir hesabın yok mu?</string>
    <string name="login_forgotpass_txt">Şifremi Unuttum</string>
    <string name="register_txt">Kayıt Ol</string>
    <string name="register_btn_txt">Kaydol</string>
    <string name="register_help_txt">Yardım</string>
    <string name="ad_soyad">Ad Soyad</string>
    <string name="mizac_tipi">Mizaç Tipi</string>
</resources>
