<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/icon_menu"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_aboutUs"
        android:icon="@drawable/icon_about_us"
        android:title="@string/title_aboutUs" />

    <item
        android:id="@+id/navigation_dtmm"
        android:icon="@drawable/icon_dtmm"
        android:title="@string/title_dtmm" />
    <!--<item-->
        <!--android:id="@+id/navigation_profile"-->
        <!--android:icon="@android:drawable/ic_menu_myplaces"-->
        <!--android:title="@string/title_profile" />-->
    <item
        android:id="@+id/navigation_suggestions"
        android:icon="@drawable/icon_friends"
        android:title="@string/title_suggestions" />

</menu>
