<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mizmer.DTMM3">

    <TextView
        android:id="@+id/textDtmm3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="243dp"
        android:text="@string/dtmm3" />

    <Button
        android:id="@+id/evetBttn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="142dp"
        android:layout_marginStart="32dp"
        android:onClick="evet3Clicked"
        android:text="@string/evet" />

    <Button
        android:id="@+id/hayirBttn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/evetBttn3"
        android:layout_centerHorizontal="true"
        android:onClick="hayir3Clicked"
        android:text="@string/hayir" />

    <Button
        android:id="@+id/ilgisizBttn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/hayirBttn3"
        android:layout_marginEnd="34dp"
        android:onClick="ilgisiz3Clicked"
        android:text="@string/ilgisiz" />

    <Button
        android:id="@+id/ilerleBttn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        android:layout_toEndOf="@+id/hayirBttn3"
        android:onClick="ilerle3Clicked"
        android:text="@string/ilerle" />

</RelativeLayout>
